--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </nav>
         
         <div class="flex w-1/2 justify-center lg:justify-start">
-          <p class="font-dewi-expanded xs:text-xl font-black">FANSCHAIN</p>
+          <h1 class="font-dewi-expanded xs:text-xl font-black">FANSCHAIN</h1>
         </div>
       </div>
       
