--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <p class="text-sm lg:text-xl pt-2 sefl-start">advantages<br>for artists</p>
       </div>
       <div class="relative flex flex-wrap lg:max-w-[800px] xs:px-12 gap-3 xs:gap-6 md:gap-10 lg:pt-10 justify-center items-center md:mx-auto z-10">
-        <div class="bg-white text-black w-32 h-32  md:w-36 md:h-36 lg:w-48 lg:h-48  border-2 border-white py-1 px-3 overflow-hidden">
+        <div class="bg-white text-black w-32 h-32  md:w-40 md:h-40 lg:w-48 lg:h-48  border-2 border-white py-1 px-3 overflow-hidden">
           <p class="text-3xl font-bold">1</p>
           <p class="text-xs pt-1 leading-3">Getting additional profit by selling tokens</p>
         </div>
@@ -383,7 +383,7 @@
 
       <div class="md:flex md:items-center md:h-full md:w-full ">
         <div class="relative w-full md:w-1/2 h-[320px] md:h-full overflow-hidden z-0">
-          <div class="relative z-0 w-full h-full bg-cover bg-center bg-no-repeat" style="background-image: url(./assets/images/face_tmb_66661_6005.jpg);"></div>          
+          <div class="relative z-0 w-full h-full bg-cover bg-center bg-no-repeat" style="background-image: url(./assets/images/face_tmb_66661_6005.jpg);"></div>
         
         <div class="controls md:container md:left-[50%] md:translate-x-[-50%] absolute bottom-0 w-full px-6 pb-6 contols flex justify-between items-center text-white z-10">
 
@@ -391,7 +391,7 @@
               <span class="iconify w-4 h-4" data-icon="bi:arrow-left"></span>
             </span>          
             
-            <span class="dots flex justify-around md:translate-x-12">
+            <span class="dots flex justify-around">
               <span class="w-2 h-2 bg-white mx-2 hover:bg-white cursor-pointer"></span>
               <span class="w-2 h-2 bg-[#4a4a4a] mx-2 hover:bg-white cursor-pointer"></span>
               <span class="w-2 h-2 bg-[#4a4a4a] mx-2 hover:bg-white cursor-pointer"></span>
